--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,8 @@
 [alias]
 lg = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) %C(white)%s%C(reset) %C(bold red)%an%C(reset) %C(bold green)%D%C(reset)' --branches
 lga = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) %C(white)%s%C(reset) %C(bold red)%an%C(reset) %C(bold green)%D%C(reset)' --all
+dad = !curl https://icanhazdadjoke.com/ && git add
+
 
 [core]
     autocrlf = false
